--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Gaceta Eorzea"
 description: "Articulos y guias de Final Fantasy XIV en Español."
 logo: 'assets/images/log.png'
 favicon: 'assets/images/logo.png'
-baseurl: ''
+baseurl: '/gaceta-eorzea'
 google_analytics: ''
 disqus: 'gacetaeorzea'
 mailchimp-list: 'https://xxxx'
@@ -66,6 +66,6 @@ adsense-data-ad-slot: "1363087678"
 # Lazy Images ("enabled" or "disabled")
 lazyimages: "disabled"
 
-exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
+exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock, build.bat]
 
 default_locale: "es"
