--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Gaceta Eorzea"
 description: "Articulos y guias de Final Fantasy XIV en Español."
 logo: 'assets/images/log.png'
 favicon: 'assets/images/logo.png'
-baseurl: '/gaceta-eorzea'
+baseurl: ''
 google_analytics: ''
 disqus: 'gacetaeorzea'
 mailchimp-list: 'https://xxxx'
