--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Articulos y guias de Final Fantasy XIV en Español."
 logo: 'assets/images/log.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
-google_analytics: ''
+google_analytics: 'G-Z6JRH15CR6'
 disqus: 'https-gaceta-eorzea-com'
 mailchimp-list: 'https://xxxx'
 include: ["_pages"]
