--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,15 @@ disqus: 'https-gaceta-eorzea-com'
 mailchimp-list: 'https://xxxx'
 include: ["_pages"]
 permalink: /:title/
-
+lang: "es_ES"
+locale: "es_ES"
+twitter:
+  username: GazetaEorzea
+  card: summary
+social:
+  name: Gaceta Eorzea
+  links:
+    - https://twitter.com/BenBalter  
 # Authors
 authors:
   cecile:
@@ -20,7 +28,7 @@ authors:
     email: jamedina@gmail.com
     web: https://www.juan-medina.com
     twitter: https://twitter.com/JuanMedinaCode
-    description: "Jugador de MMOs, juego en Ragnarok (Chaos)"
+    description: "Tecnólogo y amante de de los videojuegos, sobre todo los MMOs. Juego en Ragnarok (Chaos)"
   jony:
     name: J0HNyRISu
     display_name: J0HNyRISu
