--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ permalink: /:title/
 lang: "es_ES"
 locale: "es_ES"
 twitter:
-  username: GazetaEorzea
+  username: GacetaEorzea
   card: summary
 social:
   name: Gaceta Eorzea
