Cambio en Usuario JohnyRisu

--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ authors:
     name: J0HNyRISu
     display_name: J0HNyRISu
     avatar: 'assets/images/avatars/jony.jpg'
-    email: jamedina@gmail.com
+    email: risugamer@gmail.com
     twitter: https://twitter.com/J0HNyRISu
-    description: "Gamer y Madridista. DC y Marvel. Awakener of the Void en Wraeclast. Traveler for Tamriel. Brujo y Adalid DOVAKHIIN 13+34. Señora Noa en Ragnarok (Chaos)"    
+    description: "Jugador de MMos y JRPGs. Awakener of the Void en Wraeclast. Traveler for Tamriel. Brujo y Adalid DOVAKHIIN. For The Horde! Lady Noa en Ragnarok (Chaos)"    
 # Plugins
 plugins:
   - jekyll-paginate
