--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ authors:
     web: https://www.juan-medina.com
     twitter: https://twitter.com/JuanMedinaCode
     description: "Tecnólogo y amante de de los videojuegos, sobre todo los MMOs. Juego en Ragnarok (Chaos)"
-  jony:
+  sharn:
     name: J0HNyRISu
     display_name: J0HNyRISu
     avatar: 'assets/images/avatars/jony.jpg'
