--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,12 @@ authors:
     avatar: 'assets/images/avatars/jony.jpg'
     email: risugamer@gmail.com
     twitter: https://twitter.com/J0HNyRISu
-    description: "Jugador de MMos y JRPGs. Awakener of the Void en Wraeclast. Traveler for Tamriel. Brujo y Adalid DOVAKHIIN. For The Horde! Lady Noa en Ragnarok (Chaos)"    
+    description: "Jugador de MMos y JRPGs. Awakener of the Void en Wraeclast. Traveler for Tamriel. Brujo y Adalid DOVAKHIIN. For The Horde! Lady Noa en Ragnarok (Chaos)" 
+  ulthar:
+    name: Ulthar Hanzo
+    display_name: Ulthar
+    avatar: 'assets/images/avatars/ulthar.jpg'
+    description: "Jugador de videojuegos y programador a ratos"   
 # Plugins
 plugins:
   - jekyll-paginate
