--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ social:
 # Authors
 authors:
   cecile:
-    name: Cecile Valdelius
-    display_name: Cecile Valdelius
+    name: Cucute Cute
+    display_name: Cucute Cute
     avatar: 'assets/images/avatars/cecile.jpg'
     email: jamedina@gmail.com
     web: https://www.juan-medina.com
