--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Gaceta Eorzea"
 title: "Gaceta Eorzea"
-description: "Articulos y guias de Final Fantasy XIV en Español."
+description: "Artículos y guías de Final Fantasy XIV en Español."
 logo: 'assets/images/log.png'
 favicon: 'assets/images/logo.png'
 google_analytics: 'G-Z6JRH15CR6'
