--- a/_config.yml
+++ b/_config.yml
@@ -72,12 +72,12 @@ authors:
       avatar: 'assets/images/avatars/borja.jpg'
       twitter: https://twitter.com/Borjalos
       description: "Un random que juega, se divierte y grita mucho."
-  borja:
-      name: Borjalos Sopabuena
-      display_name: Borjalos Sopabuena
-      avatar: 'assets/images/avatars/borja.jpg'
-      twitter: https://twitter.com/Borjalos
-      description: "Un random que juega, se divierte y grita mucho."               
+  elmira:
+      name: Zarovich 
+      display_name: Zarovich 
+      avatar: 'assets/images/avatars/elmira.jpg'
+      twitter: https://www.youtube.com/zarovich
+      description: "Creador de contenido principalmente de Final Fantasy XIV en YouTube, con guías, novedades, comentarios y opinión sobre el juego."              
   fandub:
       name: Fandub 
       display_name: FFXIV Fandub 
