--- a/_config.yml
+++ b/_config.yml
@@ -171,6 +171,6 @@ adsense-data-ad-slot: "1363087678"
 # Lazy Images ("enabled" or "disabled")
 lazyimages: "enabled"
 
-exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock, build.bat, docs, tmp]
+exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock, docs, tmp, local.bat, build.bat, local.sh, build.sh]
 
 default_locale: "es"
